Upgrade to jdk17 (#245)
Co-authored-by: Antonio Murgia <antonio.murgia@agilelab.it>